--- a/MachineLearningDemo/Base.lproj/LaunchScreen.storyboard
+++ b/MachineLearningDemo/Base.lproj/LaunchScreen.storyboard
@@ -8,4 +8,7 @@
     <scenes>
         <!--View Controller-->
         <scene sceneID="EHf-IW-A2E">
-  
+            <objects>
+                <viewController id="01J-lp-oVM" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
+                        <rect key="frame" x="0.0" y="0
