update: auto update by markdown generator

--- a/MachineLearningDemo/Base.lproj/LaunchScreen.storyboard
+++ b/MachineLearningDemo/Base.lproj/LaunchScreen.storyboard
@@ -17,4 +17,9 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
-                <placeholder placehold
+                <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="53" y="375"/>
+        </scene>
+    </scenes>
+</document>
