--- a/MachineLearningDemo/View/Main.storyboard
+++ b/MachineLearningDemo/View/Main.storyboard
@@ -27,4 +27,7 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Gender" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IBN-ke-GFc">
-                               
+                                <rect key="frame" x="16" y="319" width="343" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="lJK-6s-Tq0"/>
+                   
