--- a/MachineLearningDemo/View/Main.storyboard
+++ b/MachineLearningDemo/View/Main.storyboard
@@ -39,4 +39,6 @@
                                 <rect key="frame" x="16" y="261" width="343" height="50"/>
                                 <color key="backgroundColor" red="0.76389030237662159" green="0.83616529360418967" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
-          
+                                    <constraint firstAttribute="height" constant="50" id="T0f-bG-PwC"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" weight="thin" po
