--- a/MachineLearningDemo/View/Main.storyboard
+++ b/MachineLearningDemo/View/Main.storyboard
@@ -41,4 +41,6 @@
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="T0f-bG-PwC"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" weight="thin" po
+                                <fontDescription key="fontDescription" type="system" weight="thin" pointSize="20"/>
+                                <state key="normal" title="Get Gender">
+                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace
