--- a/MachineLearningDemo/View/Main.storyboard
+++ b/MachineLearningDemo/View/Main.storyboard
@@ -43,4 +43,7 @@
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" weight="thin" pointSize="20"/>
                                 <state key="normal" title="Get Gender">
-                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace
+                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="didTapGetGenderButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ga
