--- a/MachineLearningDemo/View/Main.storyboard
+++ b/MachineLearningDemo/View/Main.storyboard
@@ -46,4 +46,7 @@
                                     <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
                                 <connections>
-                                    <action selector="didTapGetGenderButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ga
+                                    <action selector="didTapGetGenderButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="gaJ-aS-CCk"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=
