--- a/MachineLearningDemo/View/Main.storyboard
+++ b/MachineLearningDemo/View/Main.storyboard
@@ -72,4 +72,7 @@
                                     <segue destination="8b5-TT-MID" kind="show" id="zbK-PP-8qs"/>
                                 </connections>
                             </button>
-                        </subview
+                        </subviews>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="sGq-GB-CCv" firstAttribute="top" secon
