--- a/MachineLearningDemo/View/Main.storyboard
+++ b/MachineLearningDemo/View/Main.storyboard
@@ -75,4 +75,6 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="sGq-GB-CCv" firstAttribute="top" secon
+                            <constraint firstItem="sGq-GB-CCv" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" constant="223" id="7Yz-xN-bVf"/>
+                            <constraint firstItem="jnh-FF-nYZ" firstAttribute="leading" secondItem="IBN-ke-GFc" secondAttribute="leading" id="BSR-Mw-pY4"/>
+                   
