--- a/MachineLearningDemo/View/Main.storyboard
+++ b/MachineLearningDemo/View/Main.storyboard
@@ -79,4 +79,6 @@
                             <constraint firstItem="jnh-FF-nYZ" firstAttribute="leading" secondItem="IBN-ke-GFc" secondAttribute="leading" id="BSR-Mw-pY4"/>
                             <constraint firstItem="TM3-yk-mYx" firstAttribute="trailing" secondItem="sGq-GB-CCv" secondAttribute="trailing" id="CTD-wf-AWu"/>
                             <constraint firstItem="sGq-GB-CCv" firstAttribute="trailing" secondItem="jnh-FF-nYZ" secondAttribute="trailing" id="Dfa-wh-btR"/>
-                            <constraint firstItem="plR-wL-iKH" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="88" id="EOy-Kx
+                            <constraint firstItem="plR-wL-iKH" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="88" id="EOy-Kx-fQs"/>
+                            <constraint firstItem="jnh-FF-nYZ" firstAttribute="trailing" secondItem="IBN-ke-GFc" secondAttribute="trailing" id="IED-nk-Aiw"/>
+                            <constraint firstItem="
