--- a/MachineLearningDemo/View/Main.storyboard
+++ b/MachineLearningDemo/View/Main.storyboard
@@ -85,4 +85,6 @@
                             <constraint firstItem="TM3-yk-mYx" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="40" id="Rnr-U8-YfA"/>
                             <constraint firstItem="jnh-FF-nYZ" firstAttribute="top" secondItem="sGq-GB-CCv" secondAttribute="bottom" constant="8" symbolic="YES" id="WUN-KV-6Y1"/>
                             <constraint firstItem="TM3-yk-mYx" firstAttribute="leading" secondItem="sGq-GB-CCv" secondAttribute="leading" id="WhB-6a-BWq"/>
-                            <constraint firstItem="TM3-yk-mYx" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttri
+                            <constraint firstItem="TM3-yk-mYx" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="f4c-gE-ras"/>
+                            <constraint firstAttribute="bottom" secondItem="plR-wL-iKH" secondAttribute="bottom" constant="20" symbolic="YES" id="fdR-4F-LIH"/>
+                            <constraint firs
