--- a/MachineLearningDemo/View/Main.storyboard
+++ b/MachineLearningDemo/View/Main.storyboard
@@ -87,4 +87,5 @@
                             <constraint firstItem="TM3-yk-mYx" firstAttribute="leading" secondItem="sGq-GB-CCv" secondAttribute="leading" id="WhB-6a-BWq"/>
                             <constraint firstItem="TM3-yk-mYx" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="f4c-gE-ras"/>
                             <constraint firstAttribute="bottom" secondItem="plR-wL-iKH" secondAttribute="bottom" constant="20" symbolic="YES" id="fdR-4F-LIH"/>
-                            <constraint firs
+                            <constraint firstItem="TM3-yk-mYx" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="l3s-IN-yoz"/>
+                            <constraint firstItem="sGq-GB-CCv" firstAttribute="leading" secondI
