--- a/MachineLearningDemo/View/Main.storyboard
+++ b/MachineLearningDemo/View/Main.storyboard
@@ -88,4 +88,6 @@
                             <constraint firstItem="TM3-yk-mYx" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="f4c-gE-ras"/>
                             <constraint firstAttribute="bottom" secondItem="plR-wL-iKH" secondAttribute="bottom" constant="20" symbolic="YES" id="fdR-4F-LIH"/>
                             <constraint firstItem="TM3-yk-mYx" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="l3s-IN-yoz"/>
-                            <constraint firstItem="sGq-GB-CCv" firstAttribute="leading" secondI
+                            <constraint firstItem="sGq-GB-CCv" firstAttribute="leading" secondItem="jnh-FF-nYZ" secondAttribute="leading" id="lOd-da-pam"/>
+                            <constraint firstItem="IBN-ke-GFc" firstAttribute="centerX" secondItem="plR-wL-iKH" secondAttribute="centerX" id="w5y-ZD-46h"/>
+                        </constrain
