--- a/MachineLearningDemo/View/Main.storyboard
+++ b/MachineLearningDemo/View/Main.storyboard
@@ -95,4 +95,6 @@
                     </view>
                     <connections>
                         <outlet property="genderLabel" destination="IBN-ke-GFc" id="zm8-It-s5f"/>
-  
+                        <outlet property="getGenderButton" destination="jnh-FF-nYZ" id="7G7-Bp-hmt"/>
+                        <outlet property="nameTextField" destination="sGq-GB-CCv" id="K6I-Ro-JSR"/>
+                        <outlet 
