--- a/MachineLearningDemo/View/Main.storyboard
+++ b/MachineLearningDemo/View/Main.storyboard
@@ -112,4 +112,5 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                   
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uns-F8-ece" customClass="PreviewView" customModule="MachineLearningDemo" customModuleProvider="target">
+                                <rect key="fra
