ACPI / PM: Add Sony Vaio VPCEB1S1E to nonvs blacklist.

--- a/MachineLearningDemo/View/Main.storyboard
+++ b/MachineLearningDemo/View/Main.storyboard
@@ -121,4 +121,6 @@
                                 <color key="backgroundColor" red="0.74422115089999996" green="0.81338441370000003" blue="0.96259266139999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="vwY-wG-gGh"/>
-                                    <cons
+                                    <constraint firstAttribute="width" constant="140" id="yVl-Jq-R1Q"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" weight="thin" pointSize="
