--- a/MachineLearningDemo/View/Main.storyboard
+++ b/MachineLearningDemo/View/Main.storyboard
@@ -139,4 +139,6 @@
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cFm-NM-FRq">
                                 <rect key="frame" x="219" y="20" width="140" height="50"/>
-                                <color key="backgroundColor" red="0.74422
+                                <color key="backgroundColor" red="0.74422115089999996" green="0.81338441370000003" blue="0.96259266139999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <fontDescription key="fontDescription" type="system" weight="thin" pointSize="20"/>
+   
