Just change permission

--- a/MachineLearningDemo/View/Main.storyboard
+++ b/MachineLearningDemo/View/Main.storyboard
@@ -151,4 +151,5 @@
                             <constraint firstItem="uns-F8-ece" firstAttribute="leading" secondItem="ag5-3W-oCN" secondAttribute="leading" id="5sU-Ky-62H"/>
                             <constraint firstItem="Wi2-mA-xKL" firstAttribute="centerX" secondItem="uns-F8-ece" secondAttribute="centerX" id="L7I-wU-fgD"/>
                             <constraint firstItem="uns-F8-ece" firstAttribute="top" secondItem="Wi2-mA-xKL" secondAttribute="bottom" constant="8" symbolic="YES" id="MPX-YD-1fC"/>
-                      
+                            <constraint firstAttribute="trailing" secondItem="uns-F8-ece" secondAttribute="trailing" id="OdJ-nA-aEK"/>
+                            <constraint firstItem="cFm-NM-FRq" firstAttribute="trailing" secondItem="Wi2-mA-xKL" secondAttrib
