Correct the capitalization of Xcode in README

--- a/MachineLearningDemo/View/Main.storyboard
+++ b/MachineLearningDemo/View/Main.storyboard
@@ -155,4 +155,6 @@
                             <constraint firstItem="cFm-NM-FRq" firstAttribute="trailing" secondItem="Wi2-mA-xKL" secondAttribute="trailing" id="R47-UA-HIc"/>
                             <constraint firstItem="krg-Gt-CaK" firstAttribute="top" secondItem="cFm-NM-FRq" secondAttribute="top" id="S3g-87-w02"/>
                             <constraint firstItem="krg-Gt-CaK" firstAttribute="top" secondItem="iz1-hu-0i8" secondAttribute="top" id="Xfz-9z-LVA"/>
-                            <constraint firstItem="cFm-NM-FRq" firstAttribute="leading" secondItem="krg-Gt-CaK" secondAtt
+                            <constraint firstItem="cFm-NM-FRq" firstAttribute="leading" secondItem="krg-Gt-CaK" secondAttribute="trailing" constant="63" id="alu-dn-HK6"/>
+                            <constraint firstItem="uns-F8-ece" firstAttribute="bottom" secondItem="iz1-hu-0i8" secondAttribute="bottom" id="d7W-Jw-Mtf"/>
+                            <constraint fi
