--- a/MachineLearningDemo/View/Main.storyboard
+++ b/MachineLearningDemo/View/Main.storyboard
@@ -158,4 +158,6 @@
                             <constraint firstItem="cFm-NM-FRq" firstAttribute="leading" secondItem="krg-Gt-CaK" secondAttribute="trailing" constant="63" id="alu-dn-HK6"/>
                             <constraint firstItem="uns-F8-ece" firstAttribute="bottom" secondItem="iz1-hu-0i8" secondAttribute="bottom" id="d7W-Jw-Mtf"/>
                             <constraint firstItem="krg-Gt-CaK" firstAttribute="leading" secondItem="ag5-3W-oCN" secondAttribute="leadingMargin" id="k5k-PI-G7R"/>
-                            <constraint firstItem="krg-Gt-CaK" firstAttribute="baseline" secondItem="cFm-NM-FRq" 
+                            <constraint firstItem="krg-Gt-CaK" firstAttribute="baseline" secondItem="cFm-NM-FRq" secondAttribute="firstBaseline" id="s3O-XF-L2C"/>
+                            <constraint firstItem="krg-Gt-CaK" firstAttribute="leading" secondItem="Wi2-mA-xKL" secondAttribute="leading" id="v2A-gO-YrL"/>
+                            <constraint
